# cluster-tools-dartmouth

./: .gitignore  MANIFEST.in  README.md  _helpers.py  batch_submit_analyses.sh  cluster.py  config.json  config.py  config2.py  create_and_submit_jobs.py  eventseg_collector.py  eventseg_config.py  eventseg_cruncher.py  eventseg_submit.py  helpers.py  model_scripts_checker.py  model_scripts_config.py  model_scripts_cruncher.py  model_scripts_submit.py  optimize_k_collector.py  optimize_k_config.py  optimize_k_cruncher.py  optimize_k_submit.py  pieman_barplot_cruncher.py  pieman_barplot_cruncher_atlas.py  pieman_barplot_cruncher_baseline.py  pieman_barplot_cruncher_isfc.py  pieman_barplot_cruncher_mix.py  pieman_barplot_cruncher_voxel.py  pieman_cluster_bootstrap_stats.py  pieman_cluster_bootstrap_stats_atlas.py  pieman_cluster_bootstrap_stats_baseline.py  pieman_cluster_bootstrap_stats_isfc.py  pieman_cluster_bootstrap_stats_mix.py  pieman_cluster_bootstrap_stats_voxel.py  pieman_collate_results.py  pieman_collector_atlas.py  pieman_collector_atlas_ISFC.py  pieman_collector_atlas_activity.py  pieman_collector_atlas_mix.py  (+95 more)
auto_backup/: readme.txt  rsync-to-kziman.sh  rsync-to-user.sh  rsync_discovery.sh
cluster_scripts/: collector.py  config.ini  config.py  cruncher.py  run_job_cluster.sh  submit.py
cluster_tools/: __init__.py  _helpers.py
clustertools/: __init__.py  batch_submission.py  cluster.py  remote_submit.py  resubmit_failed.py  ssh_shell.py  upload_scripts.py
clustertools/_extras/: exceptions.py  multistream_wrapper.py  remote_process.py  typing.py
clustertools/mixins/: environ.py  (+2 more)
configs/: template_config.ini  template_config.txt
embedding/: embedding_collector.py  embedding_config.py  embedding_cruncher.py  embedding_submit.py
eventseg/: eventseg_collector.py  eventseg_cruncher.py
helpers/: helpers.py  prompt_input.py
mat2npz/: README.md  cruncher.sh  file_converter.py  sub_jobs.pbs
run_by_electrodes/: README.md  chruncher_electrode.sh  jobs_electrodes.pbs  print.py  worker_electrode.py
template_scripts/: config.ini
templates/: config.py  global_config.ini  project_config.ini  submit.py
(+43 files in other folders)
