[metadata]
name = cluster-tools
version = version = attr: cluster_tools.__version__
description = A Python interface for submitting, tracking, and managing jobs on
    a high-performance computing cluster.
long_description = file: README.md
author = # TODO: fill this in
author_email = # TODO: fill this in
url = https://github.com/ContextLab/cluster-tools-dartmouth
license = MIT
# TODO: generate license
license_file = LICENSE
keywords = 