[metadata]
name = cluster-tools
version = version = attr: cluster_tools.__version__
description = A Python interface for submitting, tracking, and managing jobs on
    a high-performance computing cluster.
long_description = file: README.md
author = # TODO: fill this in
author_email = # TODO: fill this in
url = https://github.com/ContextLab/cluster-tools-dartmouth
license = MIT
# TODO: generate license
license_file = LICENSE
keywords = cluster, hpc, hpcc, torque, moab, pbs, mksub, ssh
# TODO: change license classifier if license changes
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: System :: Filesystems
    Topic :: System :: Monitoring
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
install_requires =
    spur>=0.3.20
    spurplus>=2.3.4
    paramiko>=2.7.2
setup_requires = setuptools>=39.2.0
tests_require =
    pytest>=6.0.1
    typing_extensions;python_version<"3.7"
packages = find:
include_package_data = true

[options.packages.find]
exclude = tests

[bdist_wheel]
# not compatible with Python 2.x
universal = 0